--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume",
-  "type": "module",
+  "type": "commonjs",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -18,12 +18,18 @@
     "@astrojs/vercel": "^6.1.0",
     "@fontsource-variable/m-plus-2": "^5.0.15",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.302.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
