--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/react": "^3.0.8",
     "@astrojs/tailwind": "^5.0.4",
     "@astrojs/vercel": "^6.1.0",
+    "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/m-plus-2": "^5.0.15",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
