--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/m-plus-2": "^5.0.15",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.302.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
