feat: add button

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "resume",
-  "type": "commonjs",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -17,15 +16,17 @@
     "@astrojs/tailwind": "^5.0.4",
     "@astrojs/vercel": "^6.1.0",
     "@fontsource-variable/inter": "^5.0.16",
-    "@fontsource-variable/m-plus-2": "^5.0.15",
     "@heroicons/react": "^2.1.1",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.302.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
